# cno

./: .clang-format  CMakeLists.txt  input.CNOF  test.CNOF
include/: cnof.h  envlope.h  helpers.h
src/: cnof.c  envlope.c  helpers.c  main.c
